# gke-mcp

./: .gitignore  .golangci.yml  Makefile  OWNERS  README.md  SECURITY.md  gemini-extension.json  go.mod  go.sum  hello-world.yaml  main.py  pyproject.toml
.github/: CODEOWNERS  auto_request_review.yml  dependabot.yml
.github/workflows/: auto_request_review.yml  deepeval.yml  eval-daily.yml  eval-on-pr.yml  presubmit.yaml  release.yaml  review-assign.yaml
cmd/: mcp_cmds.go  root.go
cmd/manifestgen_cli/: main.go
custom_commands/gke/: cost.toml
dev/tasks/: presubmit.sh
docs/: ci_evaluation_plan.md  python_port_analysis.md
docs/installation_guide/: README.md  install_claude.md  install_cursor.md
epam/: GEMINI.md
evals/: test_manifest_gen.py  test_manifest_gen_mcp.py
gke_mcp/: __init__.py  cli.py  config.py  server.py
gke_mcp/agents/: __init__.py
gke_mcp/apps/: __init__.py  apps.py
gke_mcp/clients/: dk.py
gke_mcp/install/: __init__.py  install.py
gke_mcp/prompts/: __init__.py  prompts.py
openclaw/: README.md  openclaw.plugin.json  package-lock.json  package.json
tests/: test_agent.py  test_apps.py  test_cli.py  test_cluster.py  test_clustertoolkit.py  test_config.py  test_deploy.py  test_dk.py  test_giq.py  test_gkereleasenotes.py  test_install.py  test_k8s.py  test_k8schangelog.py  test_logging.py  test_monitoring.py  test_nodepool.py  test_operation.py  test_params.py  test_prompts.py  test_recommendation.py  test_server.py
ui/: eslint.config.ts  exfil.sh  package-lock.json  package.json  tsconfig.app.json  ui.go  vite.config.ts
(+143 files in other folders)
