[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gke-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) Server for Google Kubernetes Engine (GKE)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "mcp>=0.9.0",
    "click>=8.1.0",
    "google-genai>=0.1.1",
    "google-cloud-container>=2.36.0",
    "google-cloud-logging>=3.8.0",
    "google-cloud-monitoring>=2.17.0",
    "google-cloud-recommender>=1.11.0",
    "kubernetes>=28.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "anthropic>=0.18.0",
    "beautifulsoup4>=4.12.0",
    "google-cloud-gkerecommender>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["gke_mcp*"]

[tool.setuptools.package-data]
gke_mcp = [
    "install/GEMINI.md",
    "agents/manifestgen/instruction.md",
    "tools/schemas/*.md",
    "apps/dist/apps/dropdown/index.html",
    "apps/dist/apps/timeserieschart/index.html"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "deepeval>=1.0.0",
    "langchain-google-genai>=1.0.0",
]

[project.scripts]
gke-mcp = "gke_mcp.cli:main"

